add view daftar temuan tindakan koreksi

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -304,3 +304,8 @@ button.btn.btn-success.float-end,
 .temuanAuditBA2 {
     font-size: 12px;
 }
+
+/* view temuanTindakanKoreksi */
+.temuanTK {
+    font-size: 12px;
+}
