--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -378,3 +378,25 @@ tr.row.header_areadaftartilik,
 tr.row.header_pertanyaandaftartilik {
     display: block;
 }
+
+.select2-container .select2-selection--single
+{
+    box-sizing: border-box;
+    cursor: pointer;
+    display: block;
+    height: 38px !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: #444;
+    line-height: 36px !important;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    display: block;
+    padding-left: 12px !important;
+    padding-right: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
