--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -209,6 +209,10 @@ span.fc-title {
     background: #bfe9df;
 }
 
+.dokumenResmi {
+    font-size: 14px;
+}
+
 @media only screen and (min-width: 280px) {
     .card.login-card {
         width: 90% !important;
