--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
     --first-color-light: #afa5d9;
     --white-color: #f7f6fb;
     --medBlack-color: #303030;
-    --body-font: "Nunito", sans-serif;
+    --body-font: Arial, Helvetica, sans-serif;
     --normal-font-size: 1rem;
     --z-fixed: 100;
 }
@@ -61,6 +61,17 @@ a {
     background: #ffffff !important;
     color: #303030 !important;
     font-weight: 600px !important;
+}
+.l-navbar:hover {
+    position: fixed;
+    top: 0;
+    /* left: -30%; */
+    width: calc(var(--nav-width) + 156px);
+    height: 100vh;
+    background: linear-gradient(180deg, #6dc7fe 0%, #f8ffc9 50%);
+    /* padding: 0.5rem 1rem 0 0; */
+    transition: 0.5s;
+    z-index: var(--z-fixed);
 }
 .l-navbar {
     position: fixed;
