--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@
 }
 body {
     position: relative;
-    margin-left: 8% !important;
+    /* margin-left: 8% !important; */
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
