--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: #F8FCFB;
+    background-color: #F8FCFB !important;
     z-index: var(--z-fixed);
     transition: 0.5s;
 }
@@ -78,7 +78,7 @@ a {
     left: -30%;
     width: var(--nav-width);
     height: 100vh;
-    background-color: #bfe9df;
+    background-color: #bfe9df !important;
     /* background: linear-gradient(180deg, #6dc7fe 0%, #f8ffc9 50%); */
     padding: 0.5rem 1rem 0 0;
     transition: 0.5s;
