perbaikan form pertanyaan auditee

--- a/public/css/tinyAuditee.css
+++ b/public/css/tinyAuditee.css
@@ -1,8 +1,8 @@
-/* iframe#auditeeindikatorMutu_ifr,
+iframe#auditeeindikatorMutu_ifr,
 iframe#auditeepertanyaan_ifr {
     background-color: #e9ecef !important;
-} */
-
-.tox .tox-edit-area__iframe {
-    background-color: #e9ecef !important;
 }
+
+/* .tox .tox-edit-area__iframe {
+    background-color: #e9ecef !important;
+} */
