perbaikan scroll sidebar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,7 +90,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .nav-list {
