perbaikan scroll sidebaar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,6 +90,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .nav-list {
@@ -286,7 +287,7 @@ span.fc-title {
     .l-navbar {
         left: 0;
         padding: 1rem 1rem 0 0;
-        overflow-y: auto;
+        /* overflow-y: auto; */
     }
     .show {
         width: calc(var(--nav-width) + 156px);
