--- a/public/css/export.css
+++ b/public/css/export.css
@@ -5,6 +5,8 @@
 
 /* @media print { */
 
+    @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+
     .tablekesesuaian tr {
         border-top: 1px solid #000 !important;
     }
