--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -466,6 +466,10 @@ tr.row.header_pertanyaandaftartilik {
 }
 
 /* Tindakan Koreksi */
+span.select2.select2-container.select2-container--default {
+    width: 100% !important;
+}
+
 @media screen and (max-width: 768px)
 {
     .formTindakanKoreksi {
