--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -160,7 +160,8 @@ nav .active {
 /* header */
 li.roleAuditor.disabled,
 li.roleAuditee.disabled,
-li.roleSPM.disabled {
+li.roleSPM.disabled,
+li.roleSuperAdmin.disabled {
     pointer-events: none;
     opacity: 0.6;
 }
