percobaan integrasi masayu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -580,3 +580,10 @@ iframe#auditeeindikatorMutu_ifr,
 iframe#auditeepertanyaan_ifr {
     background-color: #e9ecef !important;
 }
+
+/* User */
+.btn.btn-sinkron-data,
+.btn.btn-sinkron-data:hover,
+.bg-sinkron-data {
+    background-color: #00d215;
+}
